[gd_scene load_steps=2 format=2]

[ext_resource path="res://VisualNovel/Sentence_Label.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 30 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 713.0
margin_right = 358.0
margin_bottom = 727.0
size_flags_horizontal = 3
text = "asdfsafdasdfsdfasffdsfsad"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 362.0
margin_right = 720.0
margin_bottom = 1440.0
size_flags_horizontal = 3
alignment = 2

[node name="speed" type="OptionButton" parent="HBoxContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 197.0
margin_bottom = 1440.0
text = "Speed"

[node name="delay" type="OptionButton" parent="HBoxContainer/HBoxContainer"]
margin_left = 201.0
margin_right = 266.0
margin_bottom = 1440.0
text = "Delay"

[node name="effect" type="OptionButton" parent="HBoxContainer/HBoxContainer"]
margin_left = 270.0
margin_right = 334.0
margin_bottom = 1440.0
text = "Effect"

[node name="Button" type="Button" parent="HBoxContainer/HBoxContainer"]
margin_left = 338.0
margin_right = 358.0
margin_bottom = 1440.0
grow_horizontal = 0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="HBoxContainer/HBoxContainer/speed" to="." method="_on_speed_item_selected"]
[connection signal="item_selected" from="HBoxContainer/HBoxContainer/delay" to="." method="_on_delay_item_selected"]
[connection signal="item_selected" from="HBoxContainer/HBoxContainer/effect" to="." method="_on_effect_item_selected"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/Button" to="." method="delete"]
